<resources>
    <string name="app_name">Masrum</string>
    <string name="app_author">Suluh Sulistiawan</string>
    <string name="app_description">Selamat datang di Masrum, Aplikasi yang bisa membantu kamu untuk mengidentifikasi sebuah jamur apakah layak dimakan atau tidak.</string>

    <string name="home">Utama</string>
    <string name="dataset">Dataset</string>
    <string name="feature">Fitur</string>
    <string name="model">Model</string>
    <string name="play">Simulasi</string>

    <string name="about_app">Tentang</string>
    <string name="about_app_description">Masrum dirancang untuk membantu pengguna mengidentifikasi sebuah jamur apakah layak/bisa dimakan atau tidak, berdasarkan ciri-ciri yang terlihat pada suatu jamur. Masrum memanfaatkan algoritma pembelajaran mesin Artificial Neural Network (ANN).</string>

    <string name="dataset_source">Sumber Dataset</string>
    <string name="dataset_source_description">Dataset yang digunakan Masrum dapat ditemukan pada situs Kaggle, silahkan menuju ke menu "Dataset" untuk informasi selengkapnya.</string>

    <string name="how_to_use">Cara Penggunaan</string>
    <string name="how_to_use_description">1. Masuk ke menu Simulasi\n2. Lengkapi data pada kolom yang tersedia\n3. Tekan tombol "Prediksi"\n4. Masrum akan memberikan hasil prediksi</string>

    <string name="social_github">GitHub</string>
    <string name="social_linkedin">LinkedIn</string>
    <string name="social_instagram">Instagram</string>

    <string name="dataset_description">Dataset yang Masrum gunakan adalah dataset milik @uciml, mushroom-classification berisi 8124 baris data dengan 23 kolom yang memuat informasi terkait ciri-ciri jamur.\n\nData tersebut mencakup informasi seperti bentuk cap, warna cap, populasi, habitat, dan sebagainya. Variable class menunjukkan jamur tersebut bisa dimakan (beracun) atau tidak.</string>
    <string name="feature_description">Masrum menggunakan 11 fitur dari 22 fitur yang ada pada dataset untuk menyederhanakan inputan pengguna. Namun, walaupun membuang sebagian besar fitur, Masrum tetap mempertahankan akurasi prediksi yang dihasilkan.</string>
    <string name="model_description_1">Masrum menggunakan model algoritma pembelajaran mesin ANN (Artificial Neural Network), ini merupakan algoritma pembelajaran mesin yang terdiri dari layer neuron yang saling terhubung. Ini dilatih menggunakan optimasi adam dengan binary_crossentropy sebagai fungsi loss. Berikut plot arsitektur model yang Masrum gunakan:</string>
    <string name="model_description_2">Model yang Marum gunakan terdiri dari 4 hidden layer dengan jumlah neuron pada layer pertama adalah 8, pada layer kedua adalah 16, pada layer ketiga adalah 32, dan pada layer ke-empat adalah 16, semuanya menggunakan fungsi aktivasi ReLU. Model yang Masrum gunakan memiliki 1 layer output dengan fungsi aktivasi Sigmoid.\n\nMasrum menggunakan model dengan akurasi sekitar 0.9963 dengan loss 0.0108.</string>

    <string name="column_class">class</string>
    <string name="column_cap_shape">cap-shape</string>
    <string name="column_cap_surface">cap-surface</string>
    <string name="column_cap_color">cap-color</string>
    <string name="column_bruises">bruises</string>
    <string name="column_odor">odor</string>
    <string name="column_gill_attachment">gill-attachment</string>
    <string name="column_gill_spacing">gill-spacing</string>
    <string name="column_gill_size">gill-size</string>
    <string name="column_gill_color">gill-color</string>
    <string name="column_stalk_shape">stalk-shape</string>
    <string name="column_stalk_root">stalk-root</string>
    <string name="column_stalk_surface_above_ring">stalk-surface-above-ring</string>
    <string name="column_stalk_surface_below_ring">stalk-surface-below-ring</string>
    <string name="column_stalk_color_above_ring">stalk-color-above-ring</string>
    <string name="column_stalk_color_below_ring">stalk-color-below-ring</string>
    <string name="column_veil_type">veil-type</string>
    <string name="column_veil_color">veil-color</string>
    <string name="column_ring_number">ring-number</string>
    <string name="column_ring_type">ring-type</string>
    <string name="column_spore_print_color">spore-print-color</string>
    <string name="column_population">population</string>
    <string name="column_habitat">habitat</string>

    <string name="open_in_kaggle">Lihat di Kaggle</string>
    <string name="lets_go">Buka Aplikasi</string>
    <string name="predict">Prediksi</string>
    <string name="question_gill_color">Apa warna insang jamur?</string>
    <string name="question_ring_number">Jumlah cincin pada jamur?</string>
    <string name="question_ring_type">Jenis cincin pada jamur?</string>
    <string name="question_population">Populasi jamur?</string>
    <string name="question_habitat">Di habitat mana jamur ditemukan?</string>
    <string name="question_bruises">Apakah jamur ini memar?</string>
    <string name="question_gill_size">Berapa ukuran insang jamur?</string>
    <string name="question_spore_print_color">Apa warna cetakan spora pada jamur?</string>
    <string name="question_cap_shape">Bentuk topi jamur?</string>
    <string name="question_cap_surface">Tekstur permukaan topi pada jamur?</string>
    <string name="question_cap_color">Warna topi jamur</string>

    <string name="hint_gill_color">Silahkan pilih warna insang yang tersedia</string>
    <string name="hint_ring_number">Silahkan pilih jumlah cincin yang tersedia</string>
    <string name="hint_ring_type">Silahkan pilih jenis cincin yang tersedia</string>
    <string name="hint_population">Silahkan pilih populasi yang tersedia</string>
    <string name="hint_habitat">Silahkan pilih habitat yang tersedia</string>
    <string name="hint_bruises">Pilih ya atau tidak</string>
    <string name="hint_gill_size">Silahkan pilih ukuran yang tersedia</string>
    <string name="hint_spore_print_color">Silahkan pilih warna yang tersedia</string>
    <string name="hint_cap_shape">Silahkan pilih bentuk yang tersedia</string>
    <string name="hint_cap_surface">Silahkan pilih tekstur yang tersedia</string>
    <string name="hint_cap_color">Silahkan pilih warna topi yang tersedia</string>

    <string-array name="cap_shape">
        <item>Berbentuk Lonceng</item>
        <item>Berbentuk Kerucut</item>
        <item>Berbentuk Cembung</item>
        <item>Berbentuk Datar</item>
        <item>Berbentuk Kuncup</item>
    </string-array>

    <string-array name="cap_surface">
        <item>Permukaan Bersisik</item>
        <item>Permukaan Halus</item>
        <item>Permukaan Berserat</item>
        <item>Permukaan Beralur</item>
    </string-array>

    <string-array name="cap_color">
        <item>Coklat</item>
        <item>Kuning Pucat</item>
        <item>Coklat Kayu Manis</item>
        <item>Abu-abu</item>
        <item>Hijau</item>
        <item>Merah Muda</item>
        <item>Ungu</item>
        <item>Merah</item>
        <item>Putih</item>
        <item>Kuning</item>
    </string-array>

    <string-array name="bruises">
        <item>Memar</item>
        <item>Tidak Ada Memar</item>
    </string-array>

    <string-array name="spore_print_color">
        <item>Hitam</item>
        <item>Coklat</item>
        <item>Kuning Pucat</item>
        <item>Cokelat</item>
        <item>Hijau</item>
        <item>Oranye</item>
        <item>Ungu</item>
        <item>Putih</item>
        <item>Kuning</item>
    </string-array>

    <string-array name="gill_size">
        <item>Lebar</item>
        <item>Sempit</item>
    </string-array>

    <string-array name="habitat">
        <item>Rerumputan</item>
        <item>Dedaunan</item>
        <item>Padang Rumput</item>
        <item>Tepian Jalan</item>
        <item>Perkotaan</item>
        <item>Limbah</item>
        <item>Hutan</item>
    </string-array>

    <string-array name="population">
        <item>Beberapa</item>
        <item>Tunggal</item>
        <item>Tersebar</item>
        <item>Banyak</item>
        <item>Melimpah</item>
        <item>Bergerombol</item>
    </string-array>

    <string-array name="ring_type">
        <item>Tidak Ada Cincin</item>
        <item>Menggantung</item>
        <item>Awalnya Ada Sekarang Menghilang</item>
        <item>Besar</item>
        <item>Cincin Membesar</item>
    </string-array>

    <string-array name="gill_color">
        <item>Hitam</item>
        <item>Coklat</item>
        <item>Kuning Pucat</item>
        <item>Cokelat</item>
        <item>Abu-abu</item>
        <item>Merah Muda</item>
        <item>Putih</item>
        <item>Kuning</item>
        <item>Ungu</item>
        <item>Merah</item>
        <item>Oranye</item>
        <item>Hijau</item>
    </string-array>

    <string-array name="ring_number">
        <item>Satu</item>
        <item>Dua</item>
        <item>Tidak Ada</item>
    </string-array>
</resources>
