<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />

    <item
        android:id="@+id/navigation_dataset"
        android:icon="@drawable/ic_dataset"
        android:title="@string/dataset" />

    <item
        android:id="@+id/navigation_feature"
        android:icon="@drawable/ic_feature"
        android:title="@string/feature" />

    <item
        android:id="@+id/navigation_model"
        android:icon="@drawable/ic_model"
        android:title="@string/model" />

    <item
        android:id="@+id/navigation_play"
        android:icon="@drawable/ic_play"
        android:title="@string/play" />

</menu>
